[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Emil POTMV <mahmutovemil88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
pydentic = "^0.0.1.dev3"
sqlalchemy = "^2.0.43"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
uvicorn = "^0.35.0"
pyjwt = "^2.10.1"
aiohttp = "^3.12.15"
alembic = "^1.16.4"
aiobotocore = "^2.24.0"
libmagic = "^1.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
